--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 
     <a class="float-button" href="#titu">
-		<span class="fa-solid fa-arrow-up"><span>
-	  </a>
-    <div class="fondo"> 
+        <span class="fa-solid fa-arrow-up"><span>
+    </a>
+    <div class="fondo">
         <div class="title" id="titu">
             <h1>PortFolio de Pedro L&aacute;zaro</h1>
         </div>
@@ -32,7 +32,7 @@
                         <li><a href="#proyects">Proyectos</a></li>
                         <li><a href="#certif">Certificados</a></li>
                         <li><a href="#contact">Contacto</a></li>
-                        <li><a href="#propri">Proyecto Personal</a></li>
+                        <li><a href="#hab">Habilidades</a></li>
                     </ul>
                 </nav>
             </div>
@@ -68,23 +68,26 @@
             <div class="proyecto1">
                 <div class="grtexto">
                     <h3>Codificador de Mensajes</h3>
-                <div class="texto">
-                    <p>Un grupo de inteligencia militar desea codificar los mensajes secretos de tal forma que no puedan
-                        ser interpretados con una lectura directa, para lo cual han establecido las siguientes reglas:
-                    </p><br><br>
-                    <ul>
-                        <li>El texto cifrado deberá contener sólo letras en mayúscula.</li><br>
-                        <li>Reemplazar cada letra por la que sigue según abecedario, excepto Z que se deberá reemplazar
-                            con la letra A.</li><br>
-                        <li>Reemplazar cada dígito encontrado por el siguiente número excepto el 9 que deberá ser
-                            reemplazado por el 0.</li><br>
-                        <li>El carácter blanco no se codifica.</li><br>
-                        <li>Una imagen que al hacer click sobre ella, se cambie por otra o se le añada un estilo css
-                            diferente.</li>
-                    </ul>
-                    <br><br>
-                    <a href="https://pedrop19.github.io/CodificadorMensajes/">Ir al proyecto</a>
-                </div>
+                    <div class="texto">
+                        <p>Un grupo de inteligencia militar desea codificar los mensajes secretos de tal forma que no
+                            puedan
+                            ser interpretados con una lectura directa, para lo cual han establecido las siguientes
+                            reglas:
+                        </p><br><br>
+                        <ul>
+                            <li>El texto cifrado deberá contener sólo letras en mayúscula.</li><br>
+                            <li>Reemplazar cada letra por la que sigue según abecedario, excepto Z que se deberá
+                                reemplazar
+                                con la letra A.</li><br>
+                            <li>Reemplazar cada dígito encontrado por el siguiente número excepto el 9 que deberá ser
+                                reemplazado por el 0.</li><br>
+                            <li>El carácter blanco no se codifica.</li><br>
+                            <li>Una imagen que al hacer click sobre ella, se cambie por otra o se le añada un estilo css
+                                diferente.</li>
+                        </ul>
+                        <br><br>
+                        <a href="https://pedrop19.github.io/CodificadorMensajes/">Ir al proyecto</a>
+                    </div>
                 </div>
                 <img class="p1" src="img/codifi.PNG" width="300px">
             </div>
@@ -93,40 +96,48 @@
                 <img class="p1" src="img/cuentaatr.PNG" width="300px">
                 <div class="grtexto">
                     <h3>Cuenta Atrás</h3>
-                <div class="texto">
-                    <p>Diseña una página web que muestre una cuenta atrás de los días, minutos y segundos que faltan para tu fecha de cumpleaños. Además, en función de la estación en la que nos encontremos:
-                    </p><br><br>
-                    <ul>
-                        <li>Otoño: Empieza a finales de Septiembre.</li><br>
-                        <li>Invierno: Empieza a finales de Diciembre.</li><br>
-                        <li>Primavera: Empieza a finales de Marzo.</li><br>
-                        <li>Verano: Empieza a finales de Junio.</li><br>
-                    </ul>
-                    <p>Deberemos mostrar un fondo, imágenes y cualquier elemento extra característico de cada estación. El día de tu cumpleaños, estos elementos deberán ser característicos de un cumpleaños, como la imagen de una tarta, además, el contador deberá ocultarse y mostrar el mensaje: “¡Felicidades!”</p>
-                    <br><br>
-                    <a href="https://pedrop19.github.io/CuentraAtras/">Ir al proyecto</a>
-                </div>
+                    <div class="texto">
+                        <p>Diseña una página web que muestre una cuenta atrás de los días, minutos y segundos que faltan
+                            para tu fecha de cumpleaños. Además, en función de la estación en la que nos encontremos:
+                        </p><br><br>
+                        <ul>
+                            <li>Otoño: Empieza a finales de Septiembre.</li><br>
+                            <li>Invierno: Empieza a finales de Diciembre.</li><br>
+                            <li>Primavera: Empieza a finales de Marzo.</li><br>
+                            <li>Verano: Empieza a finales de Junio.</li><br>
+                        </ul>
+                        <p>Deberemos mostrar un fondo, imágenes y cualquier elemento extra característico de cada
+                            estación. El día de tu cumpleaños, estos elementos deberán ser característicos de un
+                            cumpleaños, como la imagen de una tarta, además, el contador deberá ocultarse y mostrar el
+                            mensaje: “¡Felicidades!”</p>
+                        <br><br>
+                        <a href="https://pedrop19.github.io/CuentraAtras/">Ir al proyecto</a>
+                    </div>
                 </div>
             </div>
             <hr>
             <div class="proyecto1">
                 <div class="grtexto">
                     <h3>Millionarios</h3>
-                <div class="texto">
-                    <p>Inicialmente la aplicación deberá mostrar un usuario como se muestra en la pantalla, se proporciona un método que genera un nombre aleatorio, sólo hay que generar su dinero, que será aleatorio con un máximo de 1.000.000. Diseñar las funcionalidades de los botones que aparecen en pantalla:
-                    </p><br><br>
-                    <ul>
-                        <li>Añadir usuario: Añade debajo otro usuario aleatorio.</li><br>
-                        <li>Doblar el dinero de cada usuario.</li><br>
-                        <li>Reemplazar cada dígito encontrado por el siguiente número excepto el 9 que deberá ser
-                            reemplazado por el 0.</li><br>
-                        <li>Mostrar millonarios, filtrará aquellos usuarios con dinero mayor a 1.000.000 (el resto desaparece).</li><br>
-                        <li>Ordenar por dinero, de mayor a menor.</li><br>
-                        <li>Calcular el dinero total.</li>
-                    </ul>
-                    <br><br>
-                    <a href="https://pedrop19.github.io/Millionarios/">Ir al proyecto</a>
-                </div>
+                    <div class="texto">
+                        <p>Inicialmente la aplicación deberá mostrar un usuario como se muestra en la pantalla, se
+                            proporciona un método que genera un nombre aleatorio, sólo hay que generar su dinero, que
+                            será aleatorio con un máximo de 1.000.000. Diseñar las funcionalidades de los botones que
+                            aparecen en pantalla:
+                        </p><br><br>
+                        <ul>
+                            <li>Añadir usuario: Añade debajo otro usuario aleatorio.</li><br>
+                            <li>Doblar el dinero de cada usuario.</li><br>
+                            <li>Reemplazar cada dígito encontrado por el siguiente número excepto el 9 que deberá ser
+                                reemplazado por el 0.</li><br>
+                            <li>Mostrar millonarios, filtrará aquellos usuarios con dinero mayor a 1.000.000 (el resto
+                                desaparece).</li><br>
+                            <li>Ordenar por dinero, de mayor a menor.</li><br>
+                            <li>Calcular el dinero total.</li>
+                        </ul>
+                        <br><br>
+                        <a href="https://pedrop19.github.io/Millionarios/">Ir al proyecto</a>
+                    </div>
                 </div>
                 <img class="p1" src="img/mill.png" width="500px">
             </div>
@@ -146,42 +157,54 @@
                     <td>Data Visualization</td>
                     <td>freeCodeCamp</td>
                     <td>Septiembre 2023</td>
-                    <td><a href="https://freecodecamp.org/certification/fcc71bef358-085c-42b6-b379-6b974abd6774/data-visualization">Certificado</a></td>
+                    <td><a
+                            href="https://freecodecamp.org/certification/fcc71bef358-085c-42b6-b379-6b974abd6774/data-visualization">Certificado</a>
+                    </td>
                     <td>Desarrollo Front End</td>
                 </tr>
                 <tr>
                     <td>Front End Development Libraries</td>
                     <td>freeCodeCamp</td>
                     <td>Septiembre 2023</td>
-                    <td><a href="https://freecodecamp.org/certification/fcc71bef358-085c-42b6-b379-6b974abd6774/front-end-development-libraries">Certificado</a></td>
+                    <td><a
+                            href="https://freecodecamp.org/certification/fcc71bef358-085c-42b6-b379-6b974abd6774/front-end-development-libraries">Certificado</a>
+                    </td>
                     <td>Desarrollo Front End</td>
                 </tr>
                 <tr>
                     <td>JavaScript Algorithms and Data Structures</td>
                     <td>freeCodeCamp</td>
                     <td>Septiembre 2023</td>
-                    <td><a href="https://freecodecamp.org/certification/fcc71bef358-085c-42b6-b379-6b974abd6774/javascript-algorithms-and-data-structures">Certificado</a></td>
+                    <td><a
+                            href="https://freecodecamp.org/certification/fcc71bef358-085c-42b6-b379-6b974abd6774/javascript-algorithms-and-data-structures">Certificado</a>
+                    </td>
                     <td>JavaScript</td>
                 </tr>
                 <tr>
                     <td>Responsive Web Design</td>
                     <td>freeCodeCamp</td>
                     <td>Septiembre 2023</td>
-                    <td><a href="https://freecodecamp.org/certification/fcc71bef358-085c-42b6-b379-6b974abd6774/responsive-web-design">Certificado</a></td>
+                    <td><a
+                            href="https://freecodecamp.org/certification/fcc71bef358-085c-42b6-b379-6b974abd6774/responsive-web-design">Certificado</a>
+                    </td>
                     <td>CSS</td>
                 </tr>
                 <tr>
                     <td>JAVA: Empieza desde cero con IntelliJ</td>
                     <td>Udemy</td>
                     <td>Octubre 2023</td>
-                    <td><a href="https://www.udemy.com/certificate/UC-23310f17-fed8-4da9-b3df-9a0d60c01630/">Certificado</a></td>
+                    <td><a
+                            href="https://www.udemy.com/certificate/UC-23310f17-fed8-4da9-b3df-9a0d60c01630/">Certificado</a>
+                    </td>
                     <td>Java, IntelliJ</td>
                 </tr>
                 <tr>
                     <td>SQL: Creación de Bases de Datos (De cero a profesional)</td>
                     <td>Udemy</td>
                     <td>Octubre 2023</td>
-                    <td><a href="https://www.udemy.com/certificate/UC-22d73975-5bca-4d9a-893f-e3cdcf6f1bdd/">Certificado</a></td>
+                    <td><a
+                            href="https://www.udemy.com/certificate/UC-22d73975-5bca-4d9a-893f-e3cdcf6f1bdd/">Certificado</a>
+                    </td>
                     <td>MySQL</td>
                 </tr>
                 <tr>
@@ -205,24 +228,68 @@
             <h2>CONTACTO</h2>
             <div class="formu">
                 <form>
-                    <input type="text" placeholder="Introduce tu nombre...">
-                    <input type="email" placeholder="Introduce tu email...">
-                    <input type="textarea" placeholder="Introduce tu mensaje...">
+                    <label for="text">Nombre: </label>
+                    <input type="text" id="text" placeholder="Introduce tu nombre...">
+                    <br>
+                    <label for="email">Email: </label>
+                    <input type="email" id="email" placeholder="Introduce tu email...">
+                    <br>
+                    <label for="coments">Mensaje: </label>
+                    <input type="textarea" id="coments" placeholder="Introduce tu mensaje...">
+                    <br>
                     <input type="submit">
                 </form>
             </div>
         </div>
         <hr>
-        <div id="propri" class="propio">
-            <h2>PROYECTO PERSONAL</h2>
-            <div class="grtexto">
-                <p>Actualmente en desarrollo</p>
+        <div class="texto" id="hab">
+            <h2>HABILIDADES</h2>
+            <div class="tabla">
+                <table>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Icono</th>
+                    </tr>
+                    <tr>
+                        <td>JAVA</td>
+                        <td><img src="/img/java.png" width="100px"></td>
+                    </tr>
+                    <tr>
+                        <td>JavaScript</td>
+                        <td><img src="/img/jjavasc.png" width="100px"></td>
+                    </tr>
+                    <tr>
+                        <td>C#</td>
+                        <td><img src="/img/csharp.png" width="100px"></td>
+                    </tr>
+                    <tr>
+                        <td>HTML</td>
+                        <td><img src="/img/html-outline.png" width="100px"></td>
+                    </tr>
+                    <tr>
+                        <td>CSS</td>
+                        <td><img src="/img/css-outline.png" width="100px"></td>
+                    </tr>
+                    <tr>
+                        <td>SQL</td>
+                        <td><img src="/img/sql.png" width="100px"></td>
+                    </tr>
+                    <tr>
+                        <td>Bourne Shell</td>
+                        <td><img src="/img/bash.png" width="100px"></td>
+                    </tr>
+                    <tr>
+                        <td>Unity</td>
+                        <td><img src="/img/unity-icon-2048x2048-pcu6t1xp.png" width="100px"></td>
+                    </tr>
+                </table>
             </div>
         </div>
         <hr>
         <footer>
             <p>Portfolio de Pedro Rafael L&aacute;zaro Nevado © 2023 All right reserved.</p>
         </footer>
+    </div>
 
 </body>
 
